Archive2/a3/122d0937b17010/output/output
main.cpp:53:14: error: cannot initialize a variable of type 'Derived *' with an rvalue of type 'Base *'
    Derived* de2 = dynamic_cast<Base*>(b3);
             ^     ~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
